fix: remove scrollbar stable

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,11 +11,6 @@
   --color-border: rgba(255, 255, 255, 0.1);
 }
 
-html {
-  /** Avoids layout shift when scrollbar is hidden */
-  scrollbar-gutter: stable;
-}
-
 body {
   background-color: var(--color-bg-primary);
   color: var(--color-text-primary);
